# D.R.A.M

./: README.md
dram_control/: CMakeLists.txt  package.xml
dram_control/config/: control.yaml  joint_limits.yaml  js_control.yaml  localization.yaml
dram_control/include/dram_control/: dram_hardware_interface.h
dram_control/launch/: dram_controller.launch
dram_control/src/: dram_hardware_interface.cpp  dram_hardware_interface_node.cpp  hardware_ifc.cpp
dram_control/src/dram_ard/: dram_ard.ino
dram_description/: CMakeLists.txt  dram_connections.txt  package.xml
dram_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
dram_description/meshes/: base_link.stl  battery_1.stl  buck_converter_1.stl  camera_link_v1_1.stl  imu_link_1.stl  lidar_link_1.stl  middle_plate_v14_v1_1.stl  standoff10_1.stl  standoff13_2.stl  standoff13_3.stl  standoff14_1.stl  standoff14_2.stl  standoff1_1.stl  standoff2_1.stl  standoff3_1.stl  standoff4_1.stl  standoff5_1.stl  standoff5_2.stl  standoff6_1.stl  standoff8_1.stl  standoff9_1.stl  top_plate_v1_1.stl  wheel_l_b_1.stl  wheel_l_f_1.stl  wheel_r_b_1.stl  wheel_r_f_1.stl
dram_description/urdf/: dram.gazebo  dram.trans  dram.xacro  materials.xacro
dram_gazebo/: CMakeLists.txt  package.xml
dram_gazebo/launch/: lab_packaging.launch  lab_world.launch  office_world.launch  packaging.launch  test1_world.launch
dram_nav/: CMakeLists.txt  package.xml
dram_nav/config/: costmap_common.yaml  move_base_params.yaml  planner.yaml
dram_nav/launch/: amcl_demo.launch  nav.launch
(+4 files in other folders)
